# genai-job-recommender-mcp

./: .gitignore  .rules.md  README.md  app.py  mcp.py  pyproject.toml  requirements.txt
src/: helper.py  jobs_api.py
